# shell

./: .gitignore  .gitmodules  LICENSE  README.md  a  app.ts  build.zig  build.zig.zon  desktop.nix  flake.nix  gen_bindings.sh  meson.build  package-lock.json  package.json  result  shell.nix  style.scss  tsconfig.json
common/: common.css  config.zig  gresource.xml  main.vala  meson.build  root.zig  style.vala
common/command/: command.vala
common/components/: icon_button.zig  inverted_corner.vala  inverted_corner.zig  rotated_label.vala
common/config/: ast.vala  config.vala
common/popups/: popup.vala  power.vala  runner.vala
common/types/runner_sources/: source.d.ts
common/utils/: icons.ts
common/utils/runner_sources/: apps.ts  math.ts
common/widget/: Bar.tsx  Calendar.tsx  ControlCenter.tsx  NetworkAuth.tsx  Runner.tsx  clock.zig  hyprland.zig  icon.zig  indicators.zig  power_button.zig  root.zig
common/widget/bar/: Battery.tsx  Hyprland.tsx  QuickAction.tsx  SystemTray.tsx  Time.tsx  Weather.tsx
common/widget/calendar/: Calendar.tsx
common/widget/control_center/: Bluetooth.tsx  Button.tsx  Music.tsx  Network.tsx  Slider.tsx  Switch.tsx
common/widget/generic/: Spinner.tsx
common/widget/network_auth/: Auth.tsx
common/widgets/: button.vala  client.vala  clients.vala  clock.vala  indicators.vala  logo.vala  tray.vala  widget.vala  workspace.vala
common/windows/: bar.vala  error.vala  popups.vala
desktop/: app.ts  config.yaml  config.zig  gresource.xml  main.tsx  main.vala  main.zig  meson.build  package-lock.json  package.json  style.css  style.scss  widgets.zig
desktop/lib/mpd/: mpd.ts
desktop/resources/: config.json
desktop/styles/: colors.scss
desktop/util/: BtDevices.ts  cursor.ts  generic.ts  requests.ts  runner.ts
desktop/widget/: AsyncMutex.ts  Bar.tsx  Battery.tsx  Bluetooth.tsx  BottomMenu.tsx  Clients.tsx  DateTime.tsx  GlobalState.tsx  IconButton.tsx  Indicator.tsx  InvertedCorner.tsx  LineGraph.tsx  Marquee.tsx  Music.tsx  Network.tsx  TopMenu.tsx  Tray.tsx  Workspace.tsx  inverted_corner.zig
desktop/window/: Bar.tsx  Calendar.tsx  ControlCenter.tsx  Runner.tsx  bar.zig  bottom.zig
(+137 files in other folders)
